ajouter des fonctions

--- a/frontend/src/containers/Favoris/Favoris.css
+++ b/frontend/src/containers/Favoris/Favoris.css
@@ -1,4 +1,7 @@
-
+*{
+    font-family: 'Jost', sans-serif;
+font-family: 'Urbanist', sans-serif;
+}
 .container-fav{
     background-color: #FEFDF7;
     height: 100%;
