--- a/frontend/src/containers/Recommended-Visiteur/LieuDv.css
+++ b/frontend/src/containers/Recommended-Visiteur/LieuDv.css
@@ -9,14 +9,14 @@
 .container-DV .lieu-form-DV{
   display: flex;
   flex-direction: row;
-  width: 1000px;
-  height:max-content;  
+  width: 990px;
+  height:190px;  
   margin: auto;
   margin-bottom: 50px;
   border-radius: 10px;
   overflow: hidden;
   background-color: white;
-  
+  box-shadow:rgba(0, 0, 0, 0.1) 8px 1px 8px;
     
 }
 .container-DV .lieu-form-DV img{
@@ -26,16 +26,18 @@
   padding: 25px 35px 0px 15px;
  
   width: 700px;
+  
 }
 .container-DV .lieu-name-DV{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  text-align: start;  
+  text-align: start; 
+ 
  
 }
 .container-DV .lieu-name-DV h3{ 
-  margin: 0px;
+  margin: 0px 0px 3px 0px;
   font-weight: 600;
   color: #162641;
 }
@@ -43,33 +45,47 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-top: 4px;   
+  padding-top: 4px; 
+  border: none;
+  background-color: transparent;  
 }
 .container-DV .icon-star img{
  width: 20px;
  height: 20px;
+ cursor: pointer;
   
 } 
 .lieu-form-R-DV p{
-  color:#162641;
+  color:#162641; 
+  margin: 0px;
+  
 }
 .container-DV .dscp-actl{
   display: flex;
   flex-direction:row;
+  height: 80px;
+  overflow: hidden;
+  margin-top: 6px;
+ 
   
 }
 .container-DV .dscp-actl .region-name-DV {
   width:200px;
-  
-  
 }
 .container-DV .dscp-actl .dv1 {
   width:570px;
   padding-left: 5px;
   padding-top: 6px;
- 
-  
- 
+}
+
+
+.container-DV .btn-show-detl{
+  position: relative;
+  top: -17px;
+  left: 85%;
+  border: none;
+  background-color: transparent;
+  color: #c3c3c3;
 
 }
 
@@ -118,6 +134,7 @@
   color: #635D5D;
  
 }
+
 
 
 
