--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,20 @@ code {
   font-family: "Jost";
   src: url("../public/Jost.ttf");
 }
+
+.mapboxgl-ctrl-geocoder{
+  box-shadow:none !important;
+ 
+ 
+}
+.mapboxgl-ctrl-top-right{
+  right: 80% !important;
+  top: 30px !important;
+  z-index: 90 !important;
+  
+}
+.mapboxgl-popup-close-button{
+  border-radius: 0 0 0 0 !important;
+  border-color: transparent !important;
+}
+
